# PdfAnaliz

./: .env  .gitignore  .replit  DEPLOYMENT.md  README.md  README_VPS.md  api_server.py  app.py  config.json  create_simple_pdf.py  create_test_pdf.py  deepseek_analyzer.py  install.sh  kurumlar.json  nginx-pdfanalyzerrag.conf  pdf_processor.py  pdfanalyzerrag.service  pyproject.toml  replit.md  requirements.txt  setup_telegram_webhook.py  sgk_scraper.py  sgk_scraper_core.py  telegram_handlers.py  test_embeddings_count.py  test_kaysis_proxy.py  test_scraper_analyze.py  update.sh  update_proxy_db.py  utils.py
.streamlit/: config.toml
analizler/: analiz_68d94b822db1b7f69a79a861_Çevre_Şehircilik_ve_İklim_Değişikliği_Bakanlığı_20251206_191516.json
attached_assets/: Pasted--oklu-PDF-y-kleme-i-in-kullan-lan-endpoint-ve-veri-format-n-inceleyeyim-3-tools-called--1761211208390_1761211208391.txt  Pasted-Login-endpoint-inin-request-ve-response-format-n-inceleyeyim-2-tools-called-Login-End-1761212791836_1761212791837.txt
scrapers/: __init__.py  adalet_bakanligi_scraper.py  adli_tip_kurumu_scraper.py  afet_acil_durum_scraper.py  ahiler_kalkinma_ajansi_scraper.py  aile_sosyal_hizmetler_scraper.py  anayasa_mahkemesi_scraper.py  ankara_kalkinma_ajansi_scraper.py  ant_baskanligi_scraper.py  ataturk_kultur_dil_tarih_scraper.py  ataturk_orman_ciftligi_scraper.py  avrupa_birligi_egitim_genclik_scraper.py  avrupa_birligi_scraper.py  bankacilik_duzenleme_denetleme_scraper.py  basin_ilan_kurumu_scraper.py  bati_akdeniz_kalkinma_ajansi_scraper.py  boru_hatlari_petrol_tasima_scraper.py  (+14 more)
(+4 files in other folders)
