[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.6.0",
    "pypdf>=6.1.3",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "pillow>=10.0.0",
]
